# grafix

./: .gitignore  .zou-flow  AGGWcopy.bat  BUILDING.md  DESIGN.md  DOCUMENTATION.md  Directory.Build.props  HowToBuild.txt  README.md  Version.props  grafix.sln  grafix2010.sln
AggUI/: AggUI.cs  AggUI.csproj  AggWindow.cs  AntigrainCPP.csproj  AntigrainSharp.csproj  AntigrainSharp.sln  Buffer.cs  Font.cs  FontDrawer.cs  FontManager.cs  GraphicBuffer.cs  GraphicContext.cs  Interface.cs  Internals.cs  Native.cs  Path.cs  README.md  Rasterizer.cs  Renderer.cs  SystemTools.cs
AggUI/aggcpp/: CMakeLists.txt  DLL.h  agg_buffer.cpp  agg_font_face.h  agg_font_path_provider.cpp  agg_font_path_provider.h  agg_rasterizer.cpp  agg_renderer.cpp  aggcpp.msbuildproj  aggcpp.targets  aggcpp.vcxproj  antigrain.cpp  antigrain.h  application.cpp  application.h  build_lib.py  build_lib.sh  declspec.h  font.cpp  font.h  font_drawer.cpp  font_drawer.h  font_manager.cpp  font_manager.h  freetype_font.cpp  freetype_font.h  freetype_utils.cpp  freetype_utils.h  glue.cpp  graphic_buffer.cpp  graphic_buffer.h  graphic_context.cpp  graphic_context.h  interface.cpp  interface.h  main.cpp  patch_agg.py  patch_agg.sh  path.cpp  path.h  (+8 more)
AggUI/aggcpp/agg_cmake_files/: CMakeLists.txt
AggUI/aggcpp/agg_cmake_files/src/: CMakeLists.txt
AggUI/aggcpp/agg_patch_files/: CMakeLists.txt
AggUI/aggcpp/agg_patch_files/font_freetype/: agg_font_freetype.cpp  agg_font_freetype.h
AggUI/aggcpp/agg_patch_files/src/: CMakeLists.txt
AggUI/aggcpp/agg_patch_files/src/platform/win32/: agg_platform_support.cpp
AggUI/aggcpp/old/: agg_color_interpolator.h  agg_font.cpp  agg_font_opentype.cpp  agg_path.cpp  structures.cpp  structures.h  win32tempdc.h
AggUI/aggcpp/screeninfo/: CMakeLists.txt  screeninfo.h
AggUI/aggcpp/screeninfo/X11/: screeninfo.cpp
AggUI/aggcpp/screeninfo/win32/: screeninfo.cpp
AggUI/old/: Font.cs  Native.cs  Path.cs  Rasterizer.cs  RendererSolid.cs
AggUIExample/: Example.csproj  Main.cs
AggUIExample/Properties/: launchSettings.json
AntiGrain.CSharp/: AntiGrain.CSharp.csproj  Buffer.cs  Font.cs  Interface.cs  Internals.cs  Native.cs  Path.cs  Rasterizer.cs  Renderer.cs
AntiGrain.NET/: AntiGrain.NET.vcproj  AntiGrain.NET.vcxproj  AntiGrain.NET.vcxproj.filters  AntiGrain.cpp  AntiGrain.h  AssemblyInfo.cpp  ReadMe.txt  Stdafx.cpp  Stdafx.h  app.rc
AntiGrain.NET.PInvoke/: AssemblyInfo.cs  Buffer.cs  Font.cs  Interface.cs  Path.cs
AntiGrain.Win32/: AntiGrain.Win32.rc  AntiGrain.Win32.vcproj  AntiGrain.Win32.vcxproj  AntiGrain.Win32.vcxproj.filters  CMakeLists.txt  DLL.h  agg_buffer.cpp  agg_color_interpolator.h  agg_font.cpp  agg_path.cpp  agg_rasterizer.cpp  agg_renderer.cpp  agg_strsafe.h  agg_text.cpp  agg_turboheap.h  fontface.cpp  glue.cpp  interface.cpp  interface.h  main.cpp  resource.h  settings.h  structures.cpp  structures.h  wordbreak.cpp  wordbreak.h
AntiGrain.Win32/font/: Makefile  agg_font_opentype.h  agg_read_big_endian.h
IPP/include/: ipp.h  ippac.h  ippcore.h  ippcv.h  ippdefs.h  ippi.h  ippj.h  ippm.h  ippmp.h  ipps.h  ippsc.h  ippsr.h  ippvc.h  ippvm.h
IPP/lib/: ippacemerged.lib  ippacmerged.lib  ippcore64l.lib  ippcvemerged.lib  ippcvi7l.lib  ippiemerged.lib  ippji7l.lib  ippjmerged.lib  ippmpemerged.lib  ippmpi7l.lib  ippmpmerged.lib  ippscemerged.lib  ippsemerged.lib  ippsremerged.lib  ippsri7l.lib  ippvcemerged.lib  ippvci7l.lib  ippvcmerged.lib  ippvmemerged.lib
IPP/stublib/: ippac20.lib  ippac6420.lib  ippcore.lib  ippcore64.lib  ippcv20.lib  ippi20.lib  ippi6420.lib  ippj20.lib  ippj6420.lib  ippm20.lib  ippm6420.lib  ippmp20.lib  ippmp6420.lib  ipps20.lib  ipps6420.lib  ippsc6420.lib  ippsr6420.lib  ippvc20.lib  ippvc6420.lib  ippvm20.lib  ippvm6420.lib
TestAGG/: Class1.cs
agg2/: .cvsignore  ChangeLog  Makefile  Makefile.AmigaOS  Makefile.am  Makefile.in.Linux.SDL  README.txt  authors  autogen.sh  configure.in  copying  libagg.pc.in  readme
agg2/examples/: Makefile.am  aa_demo.cpp  aa_test.cpp  alpha_gradient.cpp  alpha_mask.cpp  alpha_mask2.cpp  alpha_mask3.cpp  bezier_div.cpp  bspline.cpp  circles.cpp  component_rendering.cpp  compositing.cpp  conv_contour.cpp  conv_dash_marker.cpp  conv_stroke.cpp  distortions.cpp  freetype_test.cpp  gamma_correction.cpp  gamma_ctrl.cpp  gouraud.cpp  gpc_test.cpp  gradients.cpp  graph_test.cpp  idea.cpp  image1.cpp  image_alpha.cpp  image_filters.cpp  image_filters2.cpp  image_fltr_graph.cpp  image_perspective.cpp  image_resample.cpp  image_transforms.cpp  interactive_polygon.cpp  interactive_polygon.h  line_patterns.cpp  lion.cpp  lion_lens.cpp  lion_outline.cpp  mol_view.cpp  multi_clip.cpp  (+20 more)
agg2/font/: Makefile  agg_font_face.cpp  agg_font_face.h  agg_font_manager.cpp  agg_font_manager.h  agg_font_manager_rec.cpp  agg_font_opentype.cpp  agg_font_opentype.h  agg_font_path_provider.cpp  agg_font_path_provider.h  agg_strsafe.h  agg_text_unicode_support.cpp  agg_turboheap.h  vssver.scc  win32tempdc.h
agg2/font_freetype/: .cvsignore  Makefile.am  agg_font_freetype.cpp  agg_font_freetype.h
agg2/font_win32_tt/: agg_font_win32_tt.cpp  agg_font_win32_tt.h
agg2/gpc/: .cvsignore  Makefile.am  gpc.c  gpc.h
agg2/include/: Makefile.am  agg_alpha_mask_u8.h  agg_arc.h  agg_array.h  agg_arrowhead.h  agg_basics.h  agg_bezier_arc.h  agg_bitset_iterator.h  agg_bounding_rect.h  agg_bspline.h  agg_clip_liang_barsky.h  agg_color_gray.h  agg_color_rgba.h  agg_color_rgba8.h  agg_conv_adaptor_vcgen.h  agg_conv_adaptor_vpgen.h  agg_conv_bspline.h  agg_conv_clip_polygon.h  agg_conv_clip_polyline.h  agg_conv_close_polygon.h  agg_conv_concat.h  agg_conv_contour.h  agg_conv_curve.h  agg_conv_dash.h  agg_conv_gpc.h  agg_conv_marker.h  agg_conv_marker_adaptor.h  agg_conv_segmentator.h  agg_conv_shorten_path.h  agg_conv_smooth_poly1.h  agg_conv_stroke.h  agg_conv_transform.h  agg_conv_unclose_polygon.h  agg_curves.h  agg_dda_line.h  agg_ellipse.h  agg_ellipse_bresenham.h  agg_embedded_raster_fonts.h  agg_font_cache_manager.h  agg_gamma_functions.h  (+108 more)
agg2/src/: .cvsignore  (+30 more)
grafix/: AGGWcopy.bat  Epsitec.Cresus.snk  grafix.sln  grafix2010.sln
(+380 files in other folders)
